--- a/CORFOGA/app/src/main/res/layout/activity_inspection.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_inspection.xml
@@ -232,6 +232,27 @@
                         android:layout_height="wrap_content"
                         android:entries="@array/alimento"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="@dimen/marginTop"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="Estado del animal:"
+                        android:layout_weight="3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:id="@+id/spinEstado"
+                        android:layout_weight="2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/estadoAnimal"/>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_marginTop="@dimen/marginTop"
