--- a/CORFOGA/app/src/main/res/layout/activity_animal.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_animal.xml
@@ -21,8 +21,17 @@
             android:textColor="@color/colorWords"
             />
 
+        <EditText
+            android:id="@+id/buscar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Buscar"
+            android:inputType="number"
+            android:text="" />
+
         <ListView
-            android:id="@+id/listFarms"
+            android:id="@+id/listAnimals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
